--- a/.github/workflows/building.yaml
+++ b/.github/workflows/building.yaml
@@ -1,4 +1,7 @@
+name: Build binaries
+
 on:
+  workflow_dispatch:
   release:
     types: [created]
 
@@ -17,10 +20,11 @@ jobs:
           - target: x86_64-apple-darwin
             archive: zip
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Compile and release
         uses: rust-build/rust-build.action@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+          SRC_DIR: "crates/fibora"
