--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "ofCourse"
-version = "1.1.0"
+version = "1.1.1"
 authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
 license = "MIT"
-description = "Output a string repeatedly until killed"
-readme = "README.md"
+description = "Output a string repeatedly until killed."
+readme = "readme.md"
 homepage = "https://github.com/UltiRequiem/ofCourse"
 repository = "https://github.com/UltiRequiem/ofCourse"
 keywords = ["cli", "yes"]
